# llmd

./: .gitignore  Cargo.toml  README.md  config.yaml
crates/: Cargo.toml
crates/llmd-cli/: Cargo.toml  build.rs
crates/llmd-cli/src/: main.rs  proto.rs
crates/llmd-cli/src/commands/: cp.rs  list.rs  mod.rs  model.rs  pull.rs  push.rs  rm.rs
crates/llmd-server/: Cargo.toml  build.rs
crates/llmd-server/proto/: model_service.proto
crates/llmd-server/src/: config.rs  main.rs
crates/llmd-server/src/model/: copy.rs  list.rs  mod.rs  pull.rs  push.rs  remove.rs
crates/llmd-server/src/service/: mod.rs
deploy/: llmd.yaml
