[package]
name = "llmd-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
hf-hub = "0.4.1"
tempfile = "3.8"
dirs = "5.0"

[build-dependencies]
tonic-build = { features = ["prost"], version = "0.10" }